Fix meetup details box on mobile

--- a/_sass/modules/_meetup.sass
+++ b/_sass/modules/_meetup.sass
@@ -53,6 +53,10 @@
     right: 20px
     bottom: 0
 
+  @media (max-width: 750px)
+    .details
+      width: 100%
+
   @media (max-width: 500px)
     .button-wrapper
       text-align: center
